fix border radius issue on safari

--- a/src/css/partials/_homepage-new.scss
+++ b/src/css/partials/_homepage-new.scss
@@ -16,8 +16,13 @@ $margin-spacing: 30px;
     background: #ffffff;
   }
 
+  .podcast-player {
+    transform: translateZ(0);
+  }
+
   .podcast-player .info .icon:hover {
     cursor: pointer;
+
   }
 }
 
